update models and add jupyter examples

--- a/Examples/AHP Lunch/AHP_LunchExample.ipynb
+++ b/Examples/AHP Lunch/AHP_LunchExample.ipynb
@@ -2,24 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# !pip install C:\\GitCODE\\cdfAHPANPLib\\AhpAnpLib\\dist\\AhpAnpLib-b2.2-py3-none-any.whl\n",
-    "# %pip install graphviz\n",
-    "# %pip install pydot"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from AhpAnpLib import inputs_AHPLib as cdf_inp\n",
-    "from AhpAnpLib import structs_AHPLib as cdf_str\n",
-    "from AhpAnpLib import calcs_AHPLib as cdf_calc"
+    "from AhpAnpLib import inputs_AHPLib as input\n",
+    "from AhpAnpLib import structs_AHPLib as str\n",
+    "from AhpAnpLib import calcs_AHPLib as calc"
    ]
   },
   {
@@ -43,7 +32,7 @@
    ],
    "source": [
     "#create model\n",
-    "lunchModel=cdf_str.Model(\"Lunch\")\n",
+    "lunchModel=str.Model(\"Lunch\")\n",
     "print(lunchModel)"
    ]
   },
@@ -54,16 +43,16 @@
    "outputs": [],
    "source": [
     "#create nodes\n",
-    "goal_node=cdf_str.Node(\"GoalNode\",0)\n",
+    "goal_node=str.Node(\"GoalNode\",0)\n",
     "\n",
-    "quality=cdf_str.Node(\"1Quality\",1)\n",
-    "price=cdf_str.Node(\"2Price\",2)\n",
-    "menu=cdf_str.Node(\"3Menu\",3)\n",
-    "speed=cdf_str.Node(\"4Speed\",4)\n",
+    "quality=str.Node(\"1Quality\",1)\n",
+    "price=str.Node(\"2Price\",2)\n",
+    "menu=str.Node(\"3Menu\",3)\n",
+    "speed=str.Node(\"4Speed\",4)\n",
     "\n",
-    "alt1=cdf_str.Node(\"1Primanti\",5)\n",
-    "alt2=cdf_str.Node(\"2Panera\",6)\n",
-    "alt3=cdf_str.Node(\"3Piada\",7)\n"
+    "alt1=str.Node(\"1Primanti\",5)\n",
+    "alt2=str.Node(\"2Panera\",6)\n",
+    "alt3=str.Node(\"3Piada\",7)\n"
    ]
   },
   {
@@ -73,9 +62,9 @@
    "outputs": [],
    "source": [
     "#create clusters\n",
-    "cluster0=cdf_str.Cluster(\"1Goal\",0)\n",
-    "cluster1=cdf_str.Cluster(\"2Criteria\",1)\n",
-    "cluster2=cdf_str.Cluster(\"3Alternatives\",2)"
+    "cluster0=str.Cluster(\"1Goal\",0)\n",
+    "cluster1=str.Cluster(\"2Criteria\",1)\n",
+    "cluster2=str.Cluster(\"3Alternatives\",2)"
    ]
   },
   {
@@ -241,7 +230,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cdf_inp.export4ExcelQuestFull(lunchModel,\"lunchModel_Excel_empty.xlsx\",True)\n"
+    "input.export4ExcelQuestFull(lunchModel,\"lunchModel_Excel_empty.xlsx\",True)\n"
    ]
   },
   {
@@ -302,9 +291,9 @@
     "inputFilePath=\"lunchModel_Excel_filledIn.xlsx\"\n",
     "outputFilePath=\"lunchModel_Results.xlsx\"\n",
     "\n",
-    "#cdf_inp.importFromExcel(lunchModel,inputFilePath,0)\n",
-    "cdf_calc.calcAHPMatricesSave2File(lunchModel,inputFilePath,outputFilePath,True,True,True,False)\n",
-    "cdf_calc.sensitivityCellSupermatrixPlot(lunchModel,\"3Alternatives\",outputFilePath,False,\"1Quality\",\"2Price\",\"3Menu\",\"4Speed\")\n"
+    "#input.importFromExcel(lunchModel,inputFilePath,0)\n",
+    "calc.calcAHPMatricesSave2File(lunchModel,inputFilePath,outputFilePath,True,True,True,False)\n",
+    "calc.sensitivityCellSupermatrixPlot(lunchModel,\"3Alternatives\",outputFilePath,False,\"1Quality\",\"2Price\",\"3Menu\",\"4Speed\")\n"
    ]
   }
  ],
