update ratings employee model

--- a/Examples/AHP_Ratings_Employee_Evaluation/Ratings_Employee_evaluation.ipynb
+++ b/Examples/AHP_Ratings_Employee_Evaluation/Ratings_Employee_evaluation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -320,22 +320,14 @@
     "# the command will export ratings scales pairwise comparison file in sheet 1\n",
     "# and the ratings table will be export to the same Excel file in sheet 2\n",
     "# we can then pairwise compare scale caterogies to get priorities of scales when needed\n",
-    "input.export4ExcelRatingsSetup(EmployEvaluation,\"Ratings_Employee_Eval_ratingstable.xlsx\")\n"
+    "input.export4ExcelRatingsSetup(EmployEvaluation,\"Ratings_Employee_Eval_ratingstable.xlsx\",True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/openpyxl/worksheet/_reader.py:329: UserWarning: Data Validation extension is not supported and will be removed\n",
-      "  warn(msg)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -385,7 +377,7 @@
    ],
    "source": [
     "# in this last step, we calculate ratings results and export it to an excel file\n",
-    "input.calcExcelRatings(EmployEvaluation,\"Ratings_Employee_Eval_ratingstable_rated.xlsx\",\"Ratings_Employee_Eval_ratingsresults.xlsx\")"
+    "input.calcExcelRatings(EmployEvaluation,\"Ratings_Employee_Eval_ratingstable_filledin.xlsx\",\"Ratings_Employee_Eval_ratingsresults.xlsx\")"
    ]
   }
  ],
