car model Qualtrics questionns

--- a/Examples/AHP_Car_Selection/AHP_CarExample.ipynb
+++ b/Examples/AHP_Car_Selection/AHP_CarExample.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -219,8 +219,8 @@
      "output_type": "stream",
      "text": [
       "File Len= 41\n",
-      "excel                                                     0          1   \n",
-      "0                                            GoalNode          0  \\\n",
+      "excel                                                     0          1  \\\n",
+      "0                                            GoalNode          0   \n",
       "1   Enter judgments for the paiwise comparisons in...          0   \n",
       "2                                           2Criteria  1Prestige   \n",
       "3                                           1Prestige          1   \n",
@@ -262,8 +262,8 @@
       "39                                         Sum of Col   1.392857   \n",
       "40                                                  0          0   \n",
       "\n",
-      "                2             3              4              5   \n",
-      "0               0             0              0              0  \\\n",
+      "                2             3              4              5  \\\n",
+      "0               0             0              0              0   \n",
       "1               0             0              0              0   \n",
       "2          2Price          3MPG       4Comfort  Direct values   \n",
       "3            0.25      0.333333            0.5              0   \n",
@@ -461,6 +461,40 @@
     "#5th parameter: if normal bar true then will show bars for normal eigen\n",
     "#6th parameter: if ideal bar true then will show bars for ideal eigen\n",
     "#7th parameter: if verbal true will print out the intermediate results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Export Qualtrics questionnaires"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input.genexport4QualtricsFirstLineAboveDiagQuest(\"carModel_Qualtrics_FirstLineAbove.txt\",carModel,\"dominate\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input.genexport4QualtricsFirstLineQuest(\"carModel_Qualtrics_FirstLine.txt\",carModel,\"dominate\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input.genexport4QualtricsQuestFull(\"carModel_Qualtrics_Full.txt\",carModel,\"dominate\")"
    ]
   }
  ],
