std example DM2022 joboffer model update

--- a/Examples/DM2022_std_Models/AHP_JobOffer_InitialModel_dev_byStaceyBanks_DM2022.ipynb
+++ b/Examples/DM2022_std_Models/AHP_JobOffer_InitialModel_dev_byStaceyBanks_DM2022.ipynb
@@ -446,11 +446,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# mac path\n",
-        "input.export4ExcelQuestFull(jobOfferModel, '/Users/Shared/PythonAHP/Examples/IO Files/DM_jobOfferEmpty.xlsx')\n",
-        "\n",
-        "# windows user please use the path below\n",
-        "# input.export4ExcelQuestFull(jobOfferModel, 'C:/Users/Public/PythonAHP/Examples/IO Files/DM_jobOfferEmpty.xlsx')"
+        "input.export4ExcelQuestFull(jobOfferModel, \"AHP_JobOffer_DM2022_Excel_Empty.xlsx\")"
       ]
     },
     {
@@ -566,15 +562,10 @@
         }
       ],
       "source": [
-        "# mac path\n",
-        "inputFilePath=\"/Users/Shared/PythonAHP/Examples/IO Files/jobOffer_Excel_filledinFull.xlsx\"\n",
-        "outputFilepath = \"/Users/Shared/PythonAHP/Examples/IO Files/jobOffer_Results.xlsx\"\n",
-        "\n",
-        "# windows users please use the path below\n",
-        "#inputFilePath=\"/Users/Shared/PythonAHP/Examples/IO Files/jobOffer_Excel_filledinFull.xlsx\"\n",
-        "#outputFilepath = \"/Users/Shared/PythonAHP/Examples/IO Files/jobOffer_Results.xlsx\"\n",
-        "\n",
-        "calc.calcAHPMatricesSave2File(jobOfferModel,inputFilePath,outputFilepath,True,False,True,True)\n"
+        "inputFilePath=\"AHP_JobOffer_DM2022_Excel_filledin.xlsx\"\n",
+        "outputFilepath = \"AHP_JobOffer_DM2022_Results.xlsx\"\n",
+        "# Import filledin jugments to calculate resuts\n",
+        "calc.calcAHPMatricesSave2File(jobOfferModel,inputFilePath,outputFilepath,True,False,True,True)"
       ]
     },
     {
@@ -2090,7 +2081,7 @@
         }
       ],
       "source": [
-        "\n",
+        "# sensitivity analysis\n",
         "calc.sensitivityCellSupermatrixPlot(jobOfferModel,\"Alternatives\",outputFilepath,\"Total Compensation\",\"Benefits\",\"Career Advancement\",\"Remote\")"
       ]
     }
