--- a/Examples/SuperDecisions/import_sd_models.ipynb
+++ b/Examples/SuperDecisions/import_sd_models.ipynb
@@ -11,6 +11,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "list indices must be integers or slices, not str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/Shared/GITHUB/AhpAnpLib/Examples/SuperDecisions/import_sd_models.ipynb Cell 2\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/Shared/GITHUB/AhpAnpLib/Examples/SuperDecisions/import_sd_models.ipynb#X13sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m WebBenefits\u001b[39m=\u001b[39m\u001b[39minput\u001b[39;49m\u001b[39m.\u001b[39;49mreadSDMODfile(\u001b[39m\"\u001b[39;49m\u001b[39mWebBrowser\u001b[39;49m\u001b[39m\"\u001b[39;49m,\u001b[39m\"\u001b[39;49m\u001b[39mBest_web_browser_StrategicRatings.sdmod\u001b[39;49m\u001b[39m\"\u001b[39;49m,\u001b[39mTrue\u001b[39;49;00m,\u001b[39mTrue\u001b[39;49;00m)\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/AhpAnpLib/inputs_AHPLib.py:985\u001b[0m, in \u001b[0;36mreadSDMODfile\u001b[0;34m(modelName, fileName, export, verbal)\u001b[0m\n\u001b[1;32m    983\u001b[0m \u001b[39m#read model's  clusters and nodes\u001b[39;00m\n\u001b[1;32m    984\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m0\u001b[39m,cntCl):\n\u001b[0;32m--> 985\u001b[0m     component\u001b[39m=\u001b[39mraw_lines[line]\n\u001b[1;32m    986\u001b[0m     line\u001b[39m+\u001b[39m\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m\n\u001b[1;32m    987\u001b[0m     clusters\u001b[39m.\u001b[39mappend(component) \n",
+      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not str"
+     ]
+    }
+   ],
+   "source": [
+    "WebBenefits=input.readSDMODfile(\"WebBrowser\",\"Best_web_browser_StrategicRatings.sdmod\",True,True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "list indices must be integers or slices, not str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/Shared/GITHUB/AhpAnpLib/Examples/SuperDecisions/import_sd_models.ipynb Cell 3\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/Shared/GITHUB/AhpAnpLib/Examples/SuperDecisions/import_sd_models.ipynb#X14sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m WebBrowser_B\u001b[39m=\u001b[39m\u001b[39minput\u001b[39;49m\u001b[39m.\u001b[39;49mreadSDMODfile(\u001b[39m\"\u001b[39;49m\u001b[39mWebBrowser_Benefits\u001b[39;49m\u001b[39m\"\u001b[39;49m,\u001b[39m\"\u001b[39;49m\u001b[39mWebBrowser_Benefits.sdmod\u001b[39;49m\u001b[39m\"\u001b[39;49m,\u001b[39mTrue\u001b[39;49;00m,\u001b[39mTrue\u001b[39;49;00m)\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/AhpAnpLib/inputs_AHPLib.py:985\u001b[0m, in \u001b[0;36mreadSDMODfile\u001b[0;34m(modelName, fileName, export, verbal)\u001b[0m\n\u001b[1;32m    983\u001b[0m \u001b[39m#read model's  clusters and nodes\u001b[39;00m\n\u001b[1;32m    984\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m0\u001b[39m,cntCl):\n\u001b[0;32m--> 985\u001b[0m     component\u001b[39m=\u001b[39mraw_lines[line]\n\u001b[1;32m    986\u001b[0m     line\u001b[39m+\u001b[39m\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m\n\u001b[1;32m    987\u001b[0m     clusters\u001b[39m.\u001b[39mappend(component) \n",
+      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not str"
+     ]
+    }
+   ],
+   "source": [
+    "WebBrowser_B=input.readSDMODfile(\"WebBrowser_Benefits\",\"WebBrowser_Benefits.sdmod\",True,True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
