add export results jupyter notebook

--- a/Examples/ANP_USEconomy_Prediction2008/ANP_USEconomyPrediction2008.ipynb
+++ b/Examples/ANP_USEconomy_Prediction2008/ANP_USEconomyPrediction2008.ipynb
@@ -481,6 +481,16 @@
    "source": [
     "Economy2008.printStruct()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "calc.calcAHPMatricesSave2File(Economy2008,\"2008Economy_filled.xlsx\",\"Economy2008_results.xlsx\")\n"
+   ]
   }
  ],
  "metadata": {
