update example models

--- a/Examples/AHP_Car_Selection/AHP_CarExample.ipynb
+++ b/Examples/AHP_Car_Selection/AHP_CarExample.ipynb
@@ -113,7 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we printout the model structure to calidate the model is created correctly!"
+    "Now we printout the model structure to validate the model is created correctly!"
    ]
   },
   {
